--- a/src/app/pages/favorites/favorites.component.scss
+++ b/src/app/pages/favorites/favorites.component.scss
@@ -1,4 +1,3 @@
-// src/app/pages/genre-movies/genre-movies.component.scss
 $text-color: #e0e0e0;
 $secondary-text-color: #a0a0a0;
 $card-bg: #1f1f1f; // Un gris un poco más claro que el fondo general
@@ -6,6 +5,9 @@ $button-bg: #444;
 $button-hover-bg: #555;
 $new-item-scale: 1.02; // Ligeramente más grande el item nuevo
 
+* {
+  color: $text-color;
+}
 .genre-movies-container {
   padding: 20px 4%; // Padding consistente con navbar/footer
   color: $text-color;
@@ -43,7 +45,7 @@ $new-item-scale: 1.02; // Ligeramente más grande el item nuevo
   gap: 15px;
 }
 
-// --- Estilos Layout Película NUEVA ---
+//Estilos Layout Película NUEVA
 .movie-item.is-new {
   // Puede que necesitemos un scale extra si queremos que sea más grande
   // transform: scale($new-item-scale); // Aplicado al wrapper es mejor
@@ -67,7 +69,7 @@ $new-item-scale: 1.02; // Ligeramente más grande el item nuevo
   }
 }
 
-// --- Estilos Layout Película ESTÁNDAR ---
+// Estilos Layout Película ESTÁNDAR
 .movie-item.is-standard {
   .movie-poster {
     flex: 0 0 150px; // Ancho fijo para el poster
@@ -110,14 +112,17 @@ $new-item-scale: 1.02; // Ligeramente más grande el item nuevo
 .movie-desc {
   font-size: 0.9em;
   color: $secondary-text-color;
-  line-height: 1.4;
+
   margin: 0;
   // Limitar número de líneas (opcional)
   display: -webkit-box;
+
   -webkit-line-clamp: 2; // Muestra máximo 2 líneas
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
+  max-height: 3em;
+  line-height: 1.4em;
 }
 
 .movie-actions {
