Sprint 4 Base de datos terminado

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-navbar *ngIf="layoutService.showNavbar$ | async"></app-navbar>
 
-<main class="main-content">
+<main class="main-content-wrapper">
   <router-outlet></router-outlet>
 </main>
 
