--- a/src/app/pages/auth/auth.component.html
+++ b/src/app/pages/auth/auth.component.html
@@ -1,15 +1,10 @@
-<div class="auth-container">
-  <div class="auth-card">
-
-    <div class="auth-toggle">
-      <button (click)="showLogin()" [class.active]="isLoginView">Ingresa</button>
-      <button (click)="showRegister()" [class.active]="!isLoginView">Registro</button>
+<div class="auth-container"> <div class="auth-card">    <div class="auth-toggle">
+      <button routerLink="login" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Ingresa</button>
+      <button routerLink="register" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Registro</button>
     </div>
 
     <div class="form-area">
-      <app-login *ngIf="isLoginView"></app-login>
-
-      <app-register *ngIf="!isLoginView"></app-register>
+      <router-outlet></router-outlet>
     </div>
 
   </div>
