--- a/src/app/pages/favorites/favorites.component.html
+++ b/src/app/pages/favorites/favorites.component.html
@@ -1,25 +1,24 @@
-  <div class="favorites-container">
-    <h2><br></h2>
+<div class="favorites-container">
+  <h2><br>Mis Favoritos</h2> <div *ngIf="isLoading" class="loading-indicator">
+    <p>Cargando tus películas favoritas...</p>
+  </div>
 
-    <div class="movie-list" *ngIf="favoriteMovies.length > 0; else noFavorites">
-      <div *ngFor="let movie of favoriteMovies"
-          class="movie-item-wrapper"
-          (click)="viewMovieDetails(movie)">
+  <div *ngIf="!isLoading">
+    <div class="movie-list" *ngIf="favoriteMoviesDetails.length > 0; else noFavorites">
+      <div *ngFor="let movie of favoriteMoviesDetails"
+            class="movie-item-wrapper"
+            (click)="viewMovieDetails(movie)">
 
         <div class="movie-item is-standard"> <div class="movie-poster">
-            <img [src]="movie.imageUrl" [alt]="movie.title">
-          </div>
+            <img [src]="movie.posterPath" [alt]="movie.title" onError="this.src='assets/img/DefaultPlaceholder.png'"> </div>
           <div class="movie-info">
             <h3 class="movie-title">{{ movie.title }}</h3>
             <p class="movie-desc">{{ movie.description }}</p>
           </div>
           <div class="movie-actions">
             <button class="btn btn-watch" (click)="watchMovie(movie, $event)">Ver</button>
-            <button class="btn btn-hide" (click)="hideMovie(movie, $event)">Ocultar</button>
             <button
-              class="btn btn-favorite is-favorite"
-              (click)="toggleFavorite(movie, $event)"
-              title="Quitar de favoritos">
+              class="btn btn-favorite is-favorite" (click)="removeFromFavorites(movie); $event.stopPropagation()" title="Quitar de favoritos">
               ★ Favorito
             </button>
           </div>
@@ -31,5 +30,5 @@
     <ng-template #noFavorites>
       <p class="empty-message">Aún no has añadido ninguna película a tus favoritos.</p>
     </ng-template>
-
   </div>
+</div>
